2012-07-04 AlexanderR <alexanderr at gmx dot com>

        * 6.13.11-1 :
        new upstream release.

2011-22-03 AlexanderR <alexanderr at gmx dot com>

	* 16.13.9-2 :
	added ChangeLog.
	fixed corrupted images, caused by gcc optimization.