@@ -1,9 +1,9 @@
-# Maintainer: Padfoot
+# Maintainer: Padfoot <padfoot at exemail dot com dot au>
 
 pkgname=lightdm-gtk-greeter-osk
 srcname=lightdm-gtk-greeter
 pkgver=1.1.5
-pkgrel=1
+pkgrel=2
 pkgdesc="GTK+ greeter for LightDM with on-screen keyboard support"
 arch=('i686' 'x86_64')
 license=('GPL3' 'LGPL3')
@@ -12,12 +12,12 @@ url="https://launchpad.net/lightdm-gtk-greeter"
 source=("https://launchpad.net/$srcname/trunk/$pkgver/+download/$srcname-$pkgver.tar.gz"
 lightdm-gtk-greeter.conf
 lightdm-gtk-greeter.patch)
-depends=('lightdm=>1.2.0' 'gtk3' 'archlinux-wallpaper' 'gnome-themes-standard' 'gnome-icon-theme')
+depends=('lightdm=>1.2.0' 'gtk3')
 makedepends=('gtk-doc' 'gnome-common' 'gnome-doc-utils' 'gobject-introspection' 'pkg-config' 'intltool' 'patch')
 optdepends=('xorg-xserver-xephr: run lightdm in test mode')
 install=lightdm-gtk-greeter.install
 
-conflicts=('lightdm-gtk-greeter')
+conflicts=('lightdm-gtk-greeter' 'lightdm-gtk-greeter-bzr')
 provides=('lightdm-gtk-greeter')
 
 backup=('etc/lightdm/lightdm-gtk-greeter.conf')
@@ -44,5 +44,5 @@ package() {
 }
 
 md5sums=('e42cedadbebd5b45733b32db54b83a44'
-         '29e608768bba3b8ff19fcd8a3633cde3'
+         '17c8f6ae0ff350fca16b9162e9735182'
          '283d9496d405cc19721ab6f6746a9aac')
