@@ -9,11 +9,11 @@
 # xft-rgba = Type of subpixel antialiasing (none, rgb, bgr, vrgb or vbgr)
 #
 [greeter]
-background=/usr/share/archlinux/wallpaper/archlinux-deep-aurora.jpg
-theme-name=Adwaita
-icon-name=gnome
-cursor-name=Adwaita
-font-name=Cantarell 11
+background=#000000
+theme-name=default
+icon-name=default
+cursor-name=default
+font-name=Sans Regular 11
 xft-antialias=true
 xft-dpi=96
 xft-hintstyle=slight
