@@ -1,5 +1,14 @@
 _install_notes() {
     echo
+    echo 'lightdm-gtk-greeter-osk needs to be themed before use.'
+    echo 'edit /etc/lightdm/lightdm-gtk-greeter.conf and add your themes to:'
+    echo 'background'
+    echo 'theme-name'
+    echo 'icon-name'
+    echo 'font-name'
+    echo 'cursor-name'
+    echo 'in the [greeter] section.'
+    echo
     echo 'To use an on-screen keyboard, edit /etc/lightdm/lightdm-gtk-greeter.conf and add your keyboard command to:'
     echo 'keyboard'
     echo 'in the [a11y] section.'
