@@ -15,7 +15,7 @@ makedepends=('gtk-doc' 'gnome-common' 'gnome-doc-utils' 'gobject-introspection' 
 optdepends=('xorg-xserver-xephr: run lightdm in test mode')
 install=lightdm-gtk-greeter.install
 
-conflicts=('lightdm-gtk-greeter-osk lightdm-gtk-greeter-bzr')
+conflicts=('lightdm-gtk-greeter-osk' 'lightdm-gtk-greeter-bzr')
 provides=('lightdm-gtk-greeter')
 
 backup=('etc/lightdm/lightdm-gtk-greeter.conf')
