@@ -1,7 +1,7 @@
 # Maintainer: timttmy <marshall\\dot//cleave\\at//tiscali\\dot//co\\dot//uk>
 
 pkgname=muttonchop-bzr
-pkgver=110
+pkgver=112
 pkgrel=1
 pkgdesc='MuttonChop is a media player designed to be controlled through a web interface or by a JSON API'
 arch=('i686' 'x86_64')
