@@ -1,7 +1,7 @@
 # Maintainer: Ner0
 
 pkgname=nitrotasks
-pkgver=1.0.3
+pkgver=1.0.4
 pkgrel=1
 pkgdesc="An eyecandy task managment tool"
 arch=('any')
@@ -10,7 +10,7 @@ license=('BSD')
 depends=('pygtk' 'python2' 'python2-gobject2' 'pywebkitgtk')
 makedepends=('python-distutils-extra')
 source=(https://launchpad.net/${pkgname}/trunk/${pkgver}/+download/${pkgname}_${pkgver}.tar.gz)
-md5sums=('a70a9479170e79f4bc70fd4718348f98')
+md5sums=('897de345085fd69f272d37d84d5a4ffc')
 
 package() {
   cd "$srcdir/$pkgname"
