@@ -1,7 +1,7 @@
 # Maintainer: Ner0
 
 pkgname=orion-gtk-theme
-pkgver=20120405
+pkgver=20120406
 pkgrel=1
 pkgdesc="A modern and light GTK2/GTK3 theme"
 arch=('any')
@@ -10,7 +10,7 @@ license=('GPL')
 depends=('gtk-engine-unico')
 optdepends=('gtk-engine-murrine: For GTK-2 apps')
 source=("http://www.deviantart.com/download/281431756/orion___gtk3_theme_by_satya164-d4nk24s.zip")
-md5sums=('1e50f8218109b73bca809d41f2d6c62c')
+md5sums=('c2d5cc83e0a07e616502b8568b7d1a22')
 
 
 package() {
