@@ -10,7 +10,7 @@ url='http://www.renpy.org'
 # are python-pygame and ttf-dejavu required by renpy or games itself?
 depends=('ffmpeg' 'fribidi' 'python2>=2.7' 'glew' 'freetype2' 'libpng')
 options=(!buildflags)
-conflicts=('renpy<6.13.9' 'renpy64' 'renpy-bin')
+conflicts=("renpy<$pkgver" 'renpy64' 'renpy-bin')
 # python-argparse is part of distribution since 2.7
 makedepends=('python2>=2.7' 'python-pygame')
 changelog=ChangeLog
