@@ -2,6 +2,7 @@
 
         * 6.13.11-1 :
         new upstream release.
+	moved python-pygame dependency form renpy to python-renpy.
 
 2011-22-03 AlexanderR <alexanderr at gmx dot com>
 
